--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,8 @@
 @import url('rest.css');
+html{
+	line-height: initial;
+}
+body{
+	font-size: 16px;
+}
+/*上面两行代码特意提出来，是为了解决html字体过大时，他的line-height对子孙元素的不良影响。必不可少。*/
